syntax = "proto3";
package jwt;

message ExchangeTokenRequest {
    string email = 1;
    string password = 2;
}

message ExchangeTokenResponse {
    string token = 1;
}

message GetTokenInfoRequest {
    string token = 1;
}

message GetTokenInfoResponse {
    string sub = 1;
    // issued time
    int64 iat = 2;
    // expire time
    int64 exp = 3;
    string email = 4;
    string iss = 5;
}

message RevokeTokenRequest {
    string token = 1;
}

message RevokeTokenResponse {
    bool success = 1;
}
 
service JwtService {
    rpc ExchangeToken(ExchangeTokenRequest) returns (ExchangeTokenResponse);
    rpc GetTokenInfo(GetTokenInfoRequest) returns (GetTokenInfoResponse);
    rpc RevokeToken(RevokeTokenRequest) returns (RevokeTokenResponse);
}
